fixed alignment of responsive nav bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@ body {
 }
 
 .content-wrapper {
-    /* display: block; */
     margin: 0 auto;
     width: 90%;
     
@@ -51,6 +50,7 @@ button {
 /********* NAVBAR STYLING ***********/
 .main-nav {
     width: 100%;
+    display: block;
 }
 
 .nav-list {
@@ -70,7 +70,7 @@ button {
 .nav-list li a {
     display: block;
     color: #fff;
-    text-align: right;
+    text-align: center;
     padding: 1em 1em;
     text-decoration: none;
     font-size: 1.2em;
@@ -96,6 +96,7 @@ li a:hover:not(.active) {
     width: 80%;
     margin: 0 auto;
     display: block;
+    
 }
 
 .pet-display-page-wrapper h1 {
@@ -148,3 +149,5 @@ li a:hover:not(.active) {
     width: 30%;
     justify-content: center;
 }
+
+/* ADOPTION APPLICATION STYLING */
